<resources>
    <string name="app_name">Quiz Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programming_hero">Programming Hero</string>
    <string name="quiz">Quiz</string>
    <string name="todo">TODO</string>
    <string name="highscore">Highscore</string>
    <string name="start">Start</string>
    <string name="congratulations">Congratulations</string>
    <string name="are_you_ready_to_start_the_test">Take a deep Breath. Are you ready to start the test?</string>
    <string name="startA">Start</string>
    <string name="cancel">Cancel</string>
</resources>